fixed spacing

--- a/assets/css/templatemo-edu-meeting.css
+++ b/assets/css/templatemo-edu-meeting.css
@@ -1286,15 +1286,14 @@ section.contact-us {
 }
 
 section.contact-us #contact {
-  /* background-color: #fff; */
+  background-color: #fff;
   border-radius: 20px;
   padding: 40px;
   width: 70%;
   margin-left: 15%;
+  margin-top: 30em;
 }
-section.contact-us #formholder {
-    height:33em
-}
+
 section.contact-us #contact h2 {
   text-transform: uppercase;
   color: #1f272b;
@@ -1389,9 +1388,9 @@ section.contact-us .right-info ul li span {
 
 .footer {
   text-align: center;
-  margin-top: 40px;
+  margin-top: 140px;
   border-top: 1px solid rgba(250,250,250,0.15);
-  padding: 25px 0px;
+  padding: 50px 0px;
 }
 .footer p {
   text-transform: uppercase;
